# trade-mockup

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/src/: CMakeLists.txt  Common.h  DumbInvestor.cpp  StockMarketGenerator.cpp  TradeApp.h
ClientApplication/: CMakeLists.txt  build.sh  run.sh
ClientApplication/src/: CMakeLists.txt  Client.cpp  Client.h  ClientApplication.cpp  ClientApplication.h  ClientCli.cpp  ClientCli.h  ClientUI.cpp  ClientUI.h  StockMarketGenerator.cpp  StockMarketGenerator.h  main.cpp
Libs/: .clang-format  CMakeLists.txt  install.sh  run_benchmark.sh  run_tests.sh
Libs/src/: CMakeLists.txt  Common.h
Libs/src/Toybox/: Application.cpp  Application.h  CMakeLists.txt  CallbackLifetime.h  CallbackList.h  CallbackOwner.h  Client.cpp  Client.h  Common.h  FlatMap.h  Logger.cpp  Logger.h  NetworkComponent.cpp  NetworkComponent.h  Serialization.cpp  Serialization.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h
Libs/src/Toybox.Benchmark/: CMakeLists.txt  FlatMap.Benchmark.cpp
Libs/src/Toybox.Sandbox/: CMakeLists.txt  main.cpp
Libs/src/Toybox.Test/: CMakeLists.txt  CallbackList.Test.cpp  FlatMap.Test.cpp  Serialization.Test.cpp  ThreadSafeQueue.Test.cpp  ThredPool.Test.cpp
Libs/src/TradeClient/: CMakeLists.txt  main.cpp
Libs/src/TradeCore/: CMakeLists.txt  Market.cpp  Market.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Trade.cpp  Trade.h
Libs/src/TradeCore.Benchmark/: CMakeLists.txt  OrderBook.Benchmark.cpp
Libs/src/TradeCore.Sandbox/: CMakeLists.txt  main.cpp
Libs/src/TradeCore.Test/: CMakeLists.txt
Libs/src/TradeLib/: CMakeLists.txt  Common.h  Market.cpp  Market.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  StockMarket.cpp  StockMarket.h  Trade.cpp  Trade.h  TradeDatabase.cpp  TradeDatabase.h
Libs/src/TradeLib.Benchmark/: CMakeLists.txt  OrderBook.Benchmark.cpp  StockMarket.Benchmark.cpp  StringCopy.Benchmark.cpp  StringCreation.Benchmark.cpp
Libs/src/TradeLib.Sandbox/: CMakeLists.txt
Libs/src/TradeLib.Test/: CMakeLists.txt  Market.Test.cpp  OrderBook.Test.cpp  StockMarket.Test.cpp  Trade.Test.cpp
Libs/src/UtilsLib/: Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  CallbackLifetime.h  CallbackList.h  CallbackOwner.h  Client.cpp  Client.h  Common.h  FlatMap.h  Logger.cpp  Logger.h  NetworkComponent.cpp  NetworkComponent.h  NetworkUtils.cpp  NetworkUtils.h  Serialization.cpp  Serialization.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  TimePointUtils.cpp  TimePointUtils.h
Libs/src/UtilsLib.Benchmark/: CMakeLists.txt  FlatMap.Benchmark.cpp
Libs/src/UtilsLib.Sandbox/: CMakeLists.txt  main.cpp
Libs/src/UtilsLib.Test/: CMakeLists.txt  CallbackList.Test.cpp  FlatMap.Test.cpp  Serialization.Test.cpp  ThreadSafeQueue.Test.cpp
ServerApplication/: CMakeLists.txt  build.sh  package.sh
ServerApplication/src/: CMakeLists.txt  DumbInvestor.h  Server.cpp  Server.h  ServerApplication.cpp  ServerApplication.h  ServerCli.cpp  ServerCli.h  ServerUI.cpp  ServerUI.h  StockMarketGenerator.h  TradeApp.cpp  TradeApp.h  main.cpp
TradeCommon/: BoundedHistory.h  CMakeLists.txt  ClientOptions.cpp  ClientOptions.h  Protocol.cpp  Protocol.h  ServerOptions.cpp  ServerOptions.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  Validation.cpp  Validation.h
TradeCommon.Test/: CMakeLists.txt  TradeCommon.Test.cpp
TradeCore/: CMakeLists.txt  Market.cpp  Market.h  Order.h  OrderBook.cpp  OrderBook.h
TradeCore.Benchmark/: CMakeLists.txt
TradeCore.Sandbox/: CMakeLists.txt
TradeCore.Test/: CMakeLists.txt  OrderBook.Test.cpp  Trade.Test.cpp
TradeGUI/: CMakeLists.txt
TradeGUI/include/TradeGUI/: PanelBuilder.h  UIState.h  UIStream.h
TradeGUI/src/: PanelBuilder.cpp  UIState.cpp  UIStream.cpp
src/: CMakeLists.txt  Common.h  Model.cpp  Model.h  OrderBook.cpp  OrderBook.h  TradeApp.cpp  TradeApp.h  TradeBook.cpp  TradeBook.h  TradeDatabase.cpp  TradeDatabase.h  main.cpp
src/Application/: Application.cpp  Application.h  CMakeLists.txt  Common.h  DumbInvestor.cpp  DumbInvestor.h  MarketGenerator.cpp  MarketGenerator.h  StockMarketGenerator.cpp  StockMarketGenerator.h  TradeApp.cpp  TradeApp.h  TradeDatabase.cpp  TradeDatabase.h  main.cpp
src/TradeClient/: CMakeLists.txt
src/TradeLib/: CMakeLists.txt  Common.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  StockMarket.cpp  StockMarket.h  Trade.cpp  Trade.h  TradeDatabase.cpp  TradeDatabase.h
src/UtilsLib/: CMakeLists.txt  CallbackLifetime.h  CallbackList.h  CallbackOwner.h  Client.cpp  Client.h  Common.h  Logger.cpp  Logger.h  Observer.cpp  Observer.h  ThreadSafeQueue.h
